--- a/.env
+++ b/.env
@@ -4,9 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 #VGnZxcdZLUiTVnFo
-#supabase :
-DATABASE_URL="postgres://postgres.ibmfjgkdoctuiihexpqc:VGnZxcdZLUiTVnFo@aws-0-eu-central-1.pooler.supabase.com"
 
+#supabase :
+#DATABASE_URL="postgres://postgres.ibmfjgkdoctuiihexpqc:VGnZxcdZLUiTVnFo@aws-0-eu-central-1.pooler.supabase.com"
+DATABASE_URL="postgresql://postgres:010874@localhost:5432/postgres"
 GITHUB_ID="c3b5be540026dce71107"
 GITHUB_SECRET="f53a6d757cce98a3f473a763e80a5ee305c3a694"
 
