feat : favicon, loader

--- a/.env
+++ b/.env
@@ -7,7 +7,13 @@
 
 #supabase :
 #DATABASE_URL="postgres://postgres.ibmfjgkdoctuiihexpqc:VGnZxcdZLUiTVnFo@aws-0-eu-central-1.pooler.supabase.com"
-DATABASE_URL="postgresql://postgres:010874@localhost:5432/postgres"
+
+#Local :
+#DATABASE_URL="postgresql://postgres:010874@localhost:5432/postgres"
+
+#NeonDB :
+DATABASE_URL="postgresql://FredBros:QmXJL5G3blEt@ep-dawn-thunder-a2eso1mr.eu-central-1.aws.neon.tech/spooondb?sslmode=require"
+
 GITHUB_ID="c3b5be540026dce71107"
 GITHUB_SECRET="f53a6d757cce98a3f473a763e80a5ee305c3a694"
 
