--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@
 #DATABASE_URL="postgres://postgres.ibmfjgkdoctuiihexpqc:VGnZxcdZLUiTVnFo@aws-0-eu-central-1.pooler.supabase.com"
 
 #Local :
-#DATABASE_URL="postgresql://postgres:010874@localhost:5432/postgres"
+DATABASE_URL="postgresql://postgres:010874@localhost:5432/postgres"
 
 #NeonDB :
-DATABASE_URL="postgresql://FredBros:QmXJL5G3blEt@ep-dawn-thunder-a2eso1mr.eu-central-1.aws.neon.tech/spooondb?sslmode=require"
+D#ATABASE_URL="postgresql://FredBros:QmXJL5G3blEt@ep-dawn-thunder-a2eso1mr.eu-central-1.aws.neon.tech/spooondb?sslmode=require"
 
 GITHUB_ID="c3b5be540026dce71107"
 GITHUB_SECRET="f53a6d757cce98a3f473a763e80a5ee305c3a694"
@@ -28,3 +28,4 @@ EMAIL_FROM="no-reply@spooon.com"
     
 GOOGLE_CLIENT_ID="765489666352-s9dlfds7nngfeo26qmfcpp6sv76me07i.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
+YOUTUBE_API_KEY="AIzaSyAEJF3RIOdc_Kz1rbFN2v7fAufAGUSiXKA"
