--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@t3-oss/env-nextjs": "^0.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "googleapis": "^132.0.0",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
