--- a/package.json
+++ b/package.json
@@ -31,30 +31,35 @@
     "googleapis": "^132.0.0",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
-    "next-auth": "^4.24.5",
+    "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.8",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.3",
+    "nodemailer": "^6.9.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-lite-youtube-embed": "^2.4.0",
+    "react-social-media-embed": "^2.5.9",
+    "style-loader": "^3.3.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tiktok-scraper": "^1.4.36",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@faker-js/faker": "^8.4.1",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "prisma": "^5.8.1",
-    "tailwindcss": "^3.3.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5"
+    "postcss": "^8.4.35",
+    "prisma": "^5.9.1",
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
