--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@smastrom/react-rating": "^1.5.0",
     "@t3-oss/env-nextjs": "^0.8.0",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.50.1",
     "react-lite-youtube-embed": "^2.4.0",
     "react-social-media-embed": "^2.5.9",
+    "rss-to-json": "^2.1.1",
     "style-loader": "^3.3.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
